# gstreamer-plugin-101

./: CMakeLists.txt  README.md
lib/gst/: CMakeLists.txt  example_plugin.c  example_plugin.h
